--- a/Genesco_serge_FINAL.ipynb
+++ b/Genesco_serge_FINAL.ipynb
@@ -79,7 +79,7 @@
     "df = map_my_dataframe(main_df, store_master_df, store_master_df.columns[2:], map_on='store')\n",
     "cols = [i for i in df.columns if 'ly' in i or 'avg' in i] # dropping all last year\n",
     "df = df.drop(cols, axis=1)\n",
-    "# df.to_pickle('./data/0826export_mapped.pkl')"
+    "df.to_pickle('./data/0826export_mapped.pkl')"
    ]
   },
   {
@@ -1475,7 +1475,7 @@
    "source": [
     "freq_list = [class_vars_freq, vband_vars_freq, rptcode_vars_freq, all_three]\n",
     "\n",
-    "txt_destination = './data/for_presentation/class_vband_rptcode_freq.txt'\n",
+    "txt_destination = './for_presentation/class_vband_rptcode_freq.txt'\n",
     "\n",
     "header = \"\"\"[VARIABLE, FREQUENCY COUNT] OF:\n",
     "\\n    CLASSES(7 GROUPINGS),\n",
@@ -1513,7 +1513,7 @@
     "\n",
     "names_and_dfs = list(zip(names, df_list))\n",
     "\n",
-    "xlsx_destination = './data/for_presentation/genesco_compare_tables_newest.xlsx'\n",
+    "xlsx_destination = './for_presentation/genesco_compare_tables_newest.xlsx'\n",
     "\n",
     "def excel_writer(df_list, xlsx_destination):\n",
     "    writer = pd.ExcelWriter(xlsx_destination, \n",
